# Smart-File-Finder

./: .gitignore  DESIGN.md  README.md
app/: .gitignore  README.md  pyproject.toml  smart_file_finder.py
app/sff_app/: smart_file_finder.py
app/test folder/my files/Hello/: hello.txt
app/trial_scripts/: smart_file_finder_unsloth.py
experiments/: notepadtemp.py
media/: .gitignore
model training/models/finetuned/old/Mistral_d66ea65/ollama/: Modelfile
model training/script/: read_results.py  test_model_unsloth.ipynb  test_model_unsloth.py
model training/src/data/: gen_file_data.py  gen_file_system.py
model training/src/training/: finetune.py
model_training/: README.md  requirements.txt
model_training/data/processed/: all_dataset_fix_punc.json
model_training/data/raw/: file_systems_dataset.json
model_training/data/used/: used_dataset_SUA_pick_number.json
model_training/logs/: mistral_SUA_pick_number_results.csv
model_training/models/finetuned/ollama/: Modelfile
model_training/script/: read_results.py  test_model_unsloth.py
model_training/src/data/: gen_file_data.py  gen_file_system.py
model_training/src/training/: finetune.py
model_training/src/utils/: ollamaing.py
models/base/: models
models/finetuned/checkpoint-318/: scheduler.pt
script/: read_results.py  test_model_ollama.py  test_model_unsloth.py
src/data/: gen_file_data.py  gen_file_system.py
src/training/: finetune.py
src/utils/: ollamaing.py
