[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-file-finder"
version = "0.1.0"
description = "A smart file/folder finder app"
authors = [
  { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.8"
dependencies = [
  "ollama",    # Replace with the actual PyPI package name if different
  "treelib"
]

[tool.setuptools.packages.find]
include = ["sff_app*"]

[project.scripts]
sff = "sff_app.smart_file_finder:main"